<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/course_layout">

        <TextView
            android:id="@+id/tv_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_title"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_course_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_prerequisites"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_textbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_textbooks"
            android:textColor="#000000"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_course_assessment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/course_assessment_table"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_exam"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/header_exam"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_marks"
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/header_marks"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <TextView
                    android:id="@+id/ise"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row1_exam"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ise_marks"
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row1_marks"
                    android:textColor="#000000" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mse"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row2_exam"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/mse_marks"
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row2_marks"
                    android:textColor="#000000" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ese"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row3_exam"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ese_marks"
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/row3_marks"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/total"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_marks"
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/total_marks"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_course_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/course_contents"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contents_recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />

    </LinearLayout>

</ScrollView>