<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_attendance_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/course_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sessions_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/sessions"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/present_count"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/absent_count"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_attendance_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/attendance_percent"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/session_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp">

        <TableRow
            android:id="@+id/tbAttendanceRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_attendance_sr"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/sr"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_attendance_date"
                android:layout_weight="15"
                android:layout_width="match_parent"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_attendance_time"
                android:layout_weight="15"
                android:layout_width="match_parent"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/time"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_attendance_status"
                android:layout_weight="15"
                android:layout_width="match_parent"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/status"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_attendance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" />
</LinearLayout>