<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9F6CA"
    android:id="@+id/note_desc_layout"
    tools:context="com.azimgaurav.smartstudentassistant.NotesDetailsActivity">

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        android:textColorHint="#880E4F"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp">

        <Button
            android:id="@+id/btn_delete_note"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/delete_note"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_note_share"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/share_note"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_save_note"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/save_note"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_note"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_attachment"
        app:backgroundTint="#1976D2"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_attachment"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_theme"
        app:backgroundTint="#1976D2"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_theme"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_font"
        app:backgroundTint="#1976D2"
        app:fabSize="normal" />

</RelativeLayout>